examples/errors/identification/missing_var_declaration.xana
a :: int

def main() do
    b = 1
end